--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 
 	<body>
 
-		<h1>MARVEL</h1>
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    	<a class="navbar-brand" href="#">
+		    		<img class="nav-marvel-logo" src="./images/marvel_logo.png">
+		    	</a>
+
+		    <ul class="nav navbar-nav navbar-right">
+			    <button type="button" class="btn btn-primary">X-Men</button>
+			    <button type="button" class="btn btn-primary">The Avengers</button>
+			    <button type="button" class="btn btn-primary">Guardians of the Galaxy</button>
+			</ul>
+
+		  </div>
+		</nav>
+
+		<div class="body-marvel-logo">
+			<img src="./images/marvel_logo.png">
+		</div>
 
 		<div id="container"></div>
 
