got promises.all working

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		    	</a>
 
 		    <ul class="nav navbar-nav navbar-right">
-			    <button type="button" class="btn btn-primary">X-Men</button>
-			    <button type="button" class="btn btn-primary">The Avengers</button>
-			    <button type="button" class="btn btn-primary">Guardians of the Galaxy</button>
+			    <button type="button" id="x-men" class="btn btn-primary">X-Men</button>
+			    <button type="button" id="avengers" class="btn btn-primary">The Avengers</button>
+			    <button type="button" id="guardians" class="btn btn-primary">Guardians of the Galaxy</button>
 			</ul>
 
 		  </div>
